Added some functionalities
But some are remaining
Also , removed percentage sign and added delete button there.
Used string methods for functionality to keep result in string but can perform mathmatics .

--- a/src/components/Buttons.css
+++ b/src/components/Buttons.css
@@ -11,6 +11,10 @@ button{
   box-shadow: 2px 2px black, -2px 2px black, 2px -2px black, -2px -2px black;
   cursor: pointer;
 }
+.deleteSign{
+  color: red;
+  font-size: 150%;
+}
 .plusSign{
   grid-row: 4/6;
   grid-column: 4/5;
